[gd_scene load_steps=7 format=3 uid="uid://ddm1k7v6m2wfs"]

[ext_resource type="StyleBox" uid="uid://dwxqhhtunho3f" path="res://ui/resources/dialog_styles.tres" id="1_m8cxo"]
[ext_resource type="Texture2D" uid="uid://b6q2i2qhd5xqi" path="res://assets/ui_icons/map-editor/traffic_lights.png" id="2_oad0p"]
[ext_resource type="Script" uid="uid://tk3t15e7fhy0" path="res://ui/views/map-editor/intersection-tool-panel/intersection_tool_panel.gd" id="2_rx0l2"]
[ext_resource type="Texture2D" uid="uid://cp1lledq36gpm" path="res://assets/ui_icons/map-editor/traffic_signs.png" id="3_rx0l2"]
[ext_resource type="Texture2D" uid="uid://di5o8wo5nrqtr" path="res://assets/ui_icons/chevron_down.png" id="4_x4we7"]

[sub_resource type="LabelSettings" id="LabelSettings_slinw"]
font_size = 12

[node name="IntersectionToolPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -827.0
offset_bottom = -542.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_m8cxo")
script = ExtResource("2_rx0l2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="MainWrapper" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="MarginContainer/MainWrapper"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Intersections"
label_settings = SubResource("LabelSettings_slinw")

[node name="Buttons" type="BoxContainer" parent="MarginContainer/MainWrapper"]
layout_mode = 2

[node name="TrafficLightsButton" type="Button" parent="MarginContainer/MainWrapper/Buttons"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Traffic Lights"
focus_mode = 0
icon = ExtResource("2_oad0p")
icon_alignment = 1

[node name="TrafficSignsButton" type="Button" parent="MarginContainer/MainWrapper/Buttons"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Priority Signs"
focus_mode = 0
icon = ExtResource("3_rx0l2")
icon_alignment = 1

[node name="HideButtonWrapper" type="BoxContainer" parent="MarginContainer/MainWrapper"]
layout_mode = 2

[node name="HidePanelButton" type="Button" parent="MarginContainer/MainWrapper/HideButtonWrapper"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Hide panel"
focus_mode = 0
icon = ExtResource("4_x4we7")
flat = true
expand_icon = true
